# text_to_speech_pipeline

./: .gitignore  README.md  app.py  package.json  pyproject.toml  requirements.txt  setup.py  tasks.py
lambdas/text_to_speech/: Dockerfile  main.py
tests/unit/: test_lambda_text_to_speech.py  test_text_to_speech_pipeline_stack.py
text_to_speech_pipeline/: text_to_speech_pipeline_stack.py
